SF-1012 Fix padding of icons in navigation panel
This was broken in 6aed2d79acb503b601eea9d583dff0f7f3a9d5be and caused
Azerbaijani text to be cut off due to space constraints.

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/app.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/app.component.scss
@@ -32,7 +32,7 @@
         fill: $purpleLight;
       }
     }
-    mdc-icon {
+    mdc-icon:first-child {
       color: $purpleMedium;
       fill: $purpleMedium;
       transition: color 0.15s;
